overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    istio.io/rev: asm-1-17
