overlays/dev/store-admin-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: store-admin
spec:
  hosts:
    - "*"
    - "manage.aks.rocks"
  gateways:
    - aks-store-demo-external
  http:
    - route:
        - destination:
            host: store-admin
            port:
              number: 80
