overlays/dev/store-front-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: store-front
spec:
  hosts:
    - "*"
    - "shop.aks.rocks"
  gateways:
    - aks-store-demo-external
  http:
    - route:
        - destination:
            host: store-front
            port:
              number: 80
